--- a/views/user/account.ejs
+++ b/views/user/account.ejs
@@ -1,3 +1,6 @@
+<% 
+	var date = new Date(locals.user.dataNascita)
+%>
 <!DOCTYPE html>
 <html lang="it">
 <head>
@@ -33,14 +36,14 @@
 			<span class="error" id="errorAddress"></span><br/> 
 			
 			<label for="dataNascita">Data di Nascita:</label><br/>
-			<input type="text" id="dataNascita" name="dataNascita" value="<%= locals.user.dataNascita%>" required> <br/><br/>
+			<input type="text" id="dataNascita" name="dataNascita" value="<%= date.getFullYear() + "/" + (date.getMonth() + 1) + "/" + date.getDate() %>" required> <br/><br/>
 			<span class="error" id="errorBirthDate"></span><br/> 
 			
 			<input type="submit"> <input type="reset"> <br/><br/>
 		</form>
 		
 		<p class="msg"><%= success %></p>
-		<p class="msg"> </p>
+		<p class="msg"><%= error %></p>
 	</div>
 	
 	<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
