--- a/views/admin/manageUser.ejs
+++ b/views/admin/manageUser.ejs
@@ -55,7 +55,7 @@
 						<input type="submit" value="Conferma"> <br/>
 					</div>
 				</form>
-				<span> </span><br/>
+				<span class="error"><%= errorEdit %></span><br/>
 		      </div>
 		    </div>
 		  </div>
