--- a/views/admin/manageBD.ejs
+++ b/views/admin/manageBD.ejs
@@ -45,7 +45,7 @@
                                 <label>Immagine: <input type="file" name="img"></label> <br/>
                                 <input type="submit"> <br/>
                             </div>
-                            <span></span><br/>
+                            <span class="error"><%= errorEdit %></span><br/>
                         </form>
                     </div>
                 </div>
@@ -80,7 +80,7 @@
                             <label>Immagine: <input type="file" name="img"></label> <br/>
 
                             <input type="submit"> <br/>
-                            <span> </span><br/>
+                            <span class="error"><%= errorInsert %></span><br/>
                         </form>
                     </div>
                 </div>
